test/sema/typeck/method/unknown-method.dora
class Foo
fn f(x: Foo) { x.bar(1i32); }
